Fix form input wrapping

--- a/client/components/BudgetGrid/style.scss
+++ b/client/components/BudgetGrid/style.scss
@@ -10,29 +10,27 @@
 
   tr {
     width: 100%;
-    display: table;
-    table-layout: fixed;
+    display: flex;
+    align-items: stretch;
+    height: inherit;
+    padding: 8px;
   }
 
   th, td {
-    padding: 8px;
     text-align: left;
     overflow: hidden;
-
-    &:first-child {
-      padding-left: 2em;
-    }
 
     &:last-child {
       text-align: right;
     }
 
     &:nth-child(1), &:nth-child(3) {
-      width: 20%;
+      flex: 1;
+      min-width: 120px;
     }
 
     &:nth-child(2) {
-      width: 60%;
+      flex: 3;
     }
   }
 
@@ -59,6 +57,7 @@
 
     td {
       vertical-align: top;
+      padding-left: 2em;
 
       &.neg {
         color: $red;
